# lcars-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yml  entrypoint.sh  patterns.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-build-check.yml  docker-build.yml  docker-manual.yml  docker-publish.yml
src/lcars_mcp_server/: __init__.py  __main__.py  embeddings.py  postgres.py  qdrant.py  rerank.py  server.py  settings.py  tools.py
src/lcars_rag/: __main__.py  chunking.py  config.py  dashboard.py  flow.py  mcp_client.py  metadata.py  patterns.py  scanning.py  symlinks.py  sync_repos.py  utils.py
templates/: config.html  index_monitor.html  mcp_tools.html  skip_report.html  status.html  sync_log.html
