[project]
name = "lcars-rag"
version = "0.1.0"
description = "LCARS RAG embedding pipeline using CocoIndex"
requires-python = ">=3.12"
dependencies = [
    # Core
    "PyYAML>=6.0",
    "python-dotenv>=1.2.2",

    # Database & Vector Storage
    "psycopg",
    "psycopg-binary",
    "psycopg-pool",
    "pgvector",
    "qdrant-client",

    # Embedding
    "cocoindex>=0.3.37",

    # Chunking
    "omnichunk",

    # Web UI
    "flask>=3.1.3",
    "requests>=2.31.0",

    # MCP client (for MCP test page)
    "mcp>=1.27.0",

    # MCP server (mounted into the dashboard at /mcp/http and /mcp/sse)
    "lcars-mcp-server @ git+https://github.com/CAPsMANyo/lcars-mcp-server.git@main",

    # ASGI runtime for serving Flask + FastMCP on the same port
    "uvicorn[standard]>=0.30",
    "asgiref>=3.8",
    "starlette>=0.37",
]

[project.scripts]
lcars-sync-repos = "lcars_rag.sync_repos:main"
lcars-dashboard = "lcars_rag.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lcars_rag"]
